kubernetes/nginx/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tailscale
  namespace: nginx
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    - host: nginx.internal.dmhosted.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 443
  tls:
    - hosts:
        - nginx
